# compact

./: CMakeLists.txt  main.c  window.c  window.h
core/: game.c  game.h  window.c
